objects/ccrz__E_PageLabeli18n__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__LangSequence__c</fullName>
        <formula>IF(CONTAINS(ccrz__Language__c,&apos;_&apos;),2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LangSequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Language__c</fullName>
        <description>The locale for this translation.  Must be in the form of a standard locale identifier, e.g. en_US, fr, fr_CA, etc.</description>
        <externalId>true</externalId>
        <label>Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__PageLabel__c</fullName>
        <description>The page label for which this is a translation for.</description>
        <label>CC Page Label</label>
        <referenceTo>ccrz__E_PageLabel__c</referenceTo>
        <relationshipLabel>CC PageLabeli18ns</relationshipLabel>
        <relationshipName>CC_PageLabeli18ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__ValueRT__c</fullName>
        <description>The value of this translation as a Rich Text Area.</description>
        <label>ValueRT</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Value__c</fullName>
        <description>The text data for the page label.  The preference should be to use the RT version of this field.</description>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CC PageLabeli18n</label>
    <nameField>
        <label>CC PageLabeli18n Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC PageLabeli18ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>